# open-anime-tracker

./: .gitignore  README.md  alembic.ini  config.py  const.py  data_pull.py  data_store.py  database.py  docker-compose.yml  helper_funcs.py  main.py  pyproject.toml  session.py
alembic/: env.py
alembic/versions/: 14a739fdb5ed_.py  298e9a03eb67_.py  3430aeb39371_.py  44650eccd683_.py  505bdba43992_.py  55d1dc0895fe_.py  62bacc658daa_.py  6791f0e85943_.py  8b3127c1ce0a_.py  90ae75b95f6a_.py  a4311f88dc30_.py  bf8ea404206a_.py  c0074856ad37_.py  c6cfc457c02a_.py  e6588c6c1b36_.py
common_funcs/: db_funcs.py  login.py
db_models/: anime.py  base.py  invites.py  list.py  ratings.py  seasons.py  users.py
enums/: db_enums.py
oat-frontend/: package-lock.json  package.json
oat-frontend/src/: App.css  App.tsx
oat-frontend/src/BackendRequests/: anime.ts  base.ts  user.ts
oat-frontend/src/Enums/: AnimeType.tsx
oat-frontend/src/FormComps/: CheckBoxComp.tsx  EmailComponent.tsx  InputComp.tsx  NumberInput.tsx  PasswordComp.tsx  SelectComp.tsx  TextAreaComp.tsx
oat-frontend/src/FormComps/Buttons/: SubmitBtn.tsx
oat-frontend/src/Header/: link-items.tsx  nav-header.tsx
oat-frontend/src/Main/: main-page.tsx
oat-frontend/src/Models/: anime.ts  season.ts  user.ts
oat-frontend/src/Pages/: AddAnime.tsx  GetAnime.tsx  SignIn.tsx  SignUp.tsx
oat-frontend/src/TextFormating/: text_config.ts
oat-frontend/src/extentsions/: helper_funcs.ts
project_exceptions/: exceptions.py
routes/: __init__.py  anime.py  list.py  login.py  user.py
