[tool.poetry]
name = "open-anime-tracker"
version = "0.1.0"
description = ""
authors = ["FehrIsFair <fehrisfair@proton.me>"]
readme = "README.md"
packages = [{include = "open_anime_tracker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
